================================================================================
 v2.1.1 (unreleased)
================================================================================
Fixed: Export metadata variables (furl.__title__, furl.__version__, etc).
Added: scheme, host, and netloc as parameters to furl.remove().
Changed: Homogenized parameter order across furl.add(), furl.set(), and
  furl.remove().

================================================================================
 v2.1.0
================================================================================
Added: a dont_quote= parameter to Query.encode() and a query_dont_quote=
  parameter to furl.tostr() that exempt valid query characters from being
  percent-encoded, either in their entirety with dont_quote=True, or selectively
  with dont_quote=<string>, like dont_quote='/?@_'.
Changed: Move package info from __init__.py into the more standard
  __version__.py.
Fixed: Support Unicode usernames and passwords in Python 2.
Fixed: Update orderedmultdict to v1.0.1 to resolve a DeprecationWarning.
Fixed: Encode '/' consistently in query strings across both quote_plus=True and
  quote_plus=False.

================================================================================
 v2.0.0
================================================================================
Added: All URL components (scheme, host, path, etc) to furl()'s constructor as
  keyword arguments. E.g. f = furl(scheme='http', host='host', path='/lolsup').
Changed: furl.__truediv__() and Path.__truediv__() now mirror
  Pathlib.__truediv__()'s behavior and return a new instance. The original
  instance is no longer modified. Old behavior: f = furl('1'); f / '2' -> str(f)
  == '1'. New behavior: f = furl('1'); f /= '2' -> str(f) == '1/2'.
Fixed: Path.load() now accepts Path instances, e.g. f.path.load(Path('hi')).
Removed: Support for Python 2.6, which reached EOL on 2013-10-29.
