@@ -1530,16 +1530,19 @@ class furl(URLPathCompositionInterface, QueryCompositionInterface,
 
     @origin.setter
     def origin(self, origin):
-        toks = origin.split('://', 1)
-        if len(toks) == 1:
-            host_port = origin
+        if origin is None:
+            self.scheme = self.netloc = None
         else:
-            self.scheme, host_port = toks
-
-        if ':' in host_port:
-            self.host, self.port = host_port.split(':', 1)
-        else:
-            self.host = host_port
+            toks = origin.split('://', 1)
+            if len(toks) == 1:
+                host_port = origin
+            else:
+                self.scheme, host_port = toks
+    
+            if ':' in host_port:
+                self.host, self.port = host_port.split(':', 1)
+            else:
+                self.host = host_port
 
     @property
     def url(self):
@@ -1732,8 +1735,9 @@ class furl(URLPathCompositionInterface, QueryCompositionInterface,
 
     def remove(self, args=_absent, path=_absent, fragment=_absent,
                query=_absent, scheme=False, username=False, password=False,
-               host=False, port=False, netloc=False, query_params=_absent,
-               fragment_path=_absent, fragment_args=_absent):
+               host=False, port=False, netloc=False, origin=False,
+               query_params=_absent, fragment_path=_absent,
+               fragment_args=_absent):
         """
         Remove components of this furl's URL and return this furl
         instance, <self>.
@@ -1774,6 +1778,8 @@ class furl(URLPathCompositionInterface, QueryCompositionInterface,
             self.port = None
         if netloc is True:
             self.netloc = None
+        if origin is True:
+            self.origin = None
 
         if path is not _absent:
             self.path.remove(path)
