@@ -2,9 +2,11 @@
  v2.1.1 (unreleased)
 ================================================================================
 Fixed: Export metadata variables (furl.__title__, furl.__version__, etc).
-Added: scheme, host, and netloc as parameters to furl.remove().
+Added: scheme, host, netloc, and origin as parameters to furl.remove().
 Changed: Homogenized parameter order across furl.add(), furl.set(), and
   furl.remove().
+Changed: furl.origin can be assigned None. This has the same behavior as
+  furl.remove(origin=True).
 
 ================================================================================
  v2.1.0
